syntax = "proto3";

option csharp_namespace = "ChatProject";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHello2 (HelloRequest) returns (HelloReply2);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message HelloReply2 {
	repeated HelloReply replies = 1;
}
